--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-NBA_API_KEY=
+NEXT_PUBLIC_X_RAPIDAPI_KEY=""
+NEXT_PUBLIC_X_RAPIDAPI_HOST=""
+NEXT_PUBLIC_API_URL="https://api-nba-v1.p.rapidapi.com"
