--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@react-hook/mouse-position": "^4.1.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -17,9 +18,11 @@
     "dotenv": "^16.3.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.12.8",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "firebase": "^9.6.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
